--- a/.gitignore
+++ b/.gitignore
@@ -4,20 +4,15 @@ node_modules
 /dist
 package-lock.json
 
-
-
-
 # local env files
 .env.local
 .env.*.local
-
 
 # Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-
 
 # Editor directories and files
 .idea
@@ -27,8 +22,4 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
-
-
-## Ephemeris Files
-*.eph
-*.se1
+src/components/LocationService.vue
