--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@astrodraw/astrochart": "^3.0.2",
-    "axios": "^1.6.5",
+    "@vueform/toggle": "^2.1.4",
+    "axios": "^1.6.7",
     "core-js": "^3.8.3",
+    "d3": "^7.8.5",
     "vue": "^3.2.13",
+    "vue-good-table-next": "^0.2.1",
     "vue3-datepicker": "^0.4.0"
   },
   "devDependencies": {
