--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "server": "nodemon server/charts_db_server.js",
+    "start": "concurrently \"npm run serve\" \"npm run server\""
   },
   "dependencies": {
     "@vueform/toggle": "^2.1.4",
     "axios": "^1.6.7",
     "core-js": "^3.8.3",
+    "cors": "^2.8.5",
     "d3": "^7.8.5",
+    "papaparse": "^5.4.1",
     "vue": "^3.2.13",
     "vue-good-table-next": "^0.2.1",
     "vue3-datepicker": "^0.4.0"
@@ -22,8 +26,10 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "concurrently": "^8.2.2",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "nodemon": "^3.1.0"
   },
   "eslintConfig": {
     "root": true,
